--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
 spring.ai.ollama.base-url=http://localhost:11434
-spring.ai.ollama.chat.model=llama3
-spring.ai.ollama.chat.options.temperature=0.1
+spring.ai.ollama.chat.model=llama3:8b-instruct-q8_0
 spring.ai.ollama.chat.enabled=true
